import { DefinedTerm,string } from "./DefinedTerm,string";
import { string,DefinedTerm,string } from "./string,DefinedTerm,string";
import { string,DefinedTerm } from "./string,DefinedTerm";
import { date } from "./date";
import { dateTime } from "./dateTime";
import { string,string,Product } from "./string,string,Product";
import { Review } from "./Review";
import { string,string } from "./string,string";
import { Person,Organization } from "./Person,Organization";
import { Country } from "./Country";
import { Person } from "./Person";
import { Grant } from "./Grant";
import { DefinedTerm,string,string } from "./DefinedTerm,string,string";
import { number,string } from "./number,string";
import { Audience } from "./Audience";
import { Offer,Demand } from "./Offer,Demand";
import { Place } from "./Place";
import { MediaObject } from "./MediaObject";
import { QuantitativeValue,string } from "./QuantitativeValue,string";
import { Thing } from "./Thing";
import { Organization,Person } from "./Organization,Person";
import { Organization } from "./Organization";
import { CreativeWork } from "./CreativeWork";
import { CreativeWork,string } from "./CreativeWork,string";
import { Comment } from "./Comment";
import { PublicationEvent } from "./PublicationEvent";
import { AggregateRating } from "./AggregateRating";
import { Duration } from "./Duration";
import { InteractionCounter } from "./InteractionCounter";
import { CreativeWork,string,Product } from "./CreativeWork,string,Product";
import { string,CreativeWork } from "./string,CreativeWork";
import { date,dateTime } from "./date,dateTime";
import { Event } from "./Event";
import { dateTime,date } from "./dateTime,date";
import { AlignmentObject } from "./AlignmentObject";
import { string,string,CorrectionComment } from "./string,string,CorrectionComment";
import { string,Rating } from "./string,Rating";
import { QuantitativeValue,DefinedTerm,string,SizeSpecification } from "./QuantitativeValue,DefinedTerm,string,SizeSpecification";
import { dateTime,string } from "./dateTime,string";
import { string,Language } from "./string,Language";
import { string,CreativeWork,Product } from "./string,CreativeWork,Product";
import { Claim } from "./Claim";
import { WebPage,string } from "./WebPage,string";
import { AudioObject,MusicRecording,Clip } from "./AudioObject,MusicRecording,Clip";
import { ItemList } from "./ItemList";
import { string,dateTime,string } from "./string,dateTime,string";
import { Clip,VideoObject } from "./Clip,VideoObject";


export class CreativeWork extends Thing {
  teaches: DefinedTerm,string;
  educationalLevel: string,DefinedTerm,string;
  abstract: string;
  creativeWorkStatus: string,DefinedTerm;
  expires: date;
  contentReferenceTime: dateTime;
  material: string,string,Product;
  review: Review;
  fileFormat: string,string;
  text: string;
  translator: Person,Organization;
  award: string;
  assesses: string,DefinedTerm;
  copyrightNotice: string;
  schemaVersion: string,string;
  countryOfOrigin: Country;
  pattern: DefinedTerm,string;
  accountablePerson: Person;
  funding: Grant;
  educationalUse: DefinedTerm,string;
  genre: string,string;
  keywords: DefinedTerm,string,string;
  position: number,string;
  accessibilityHazard: string;
  alternativeHeadline: string;
  audience: Audience;
  offers: Offer,Demand;
  locationCreated: Place;
  associatedMedia: MediaObject;
  [object Object]: QuantitativeValue,string;
  mainEntity: Thing;
  copyrightHolder: Organization,Person;
  awards: string;
  contentLocation: Place;
  sdDatePublished: date;
  producer: Organization,Person;
  spatial: Place;
  publisher: Person,Organization;
  sourceOrganization: Organization;
  character: Person;
  funder: Organization,Person;
  exampleOfWork: CreativeWork;
  usageInfo: CreativeWork,string;
  provider: Organization,Person;
  sdPublisher: Organization,Person;
  comment: Comment;
  accessibilityFeature: string;
  publication: PublicationEvent;
  translationOfWork: CreativeWork;
  interactivityType: string;
  commentCount: number;
  accessMode: string;
  aggregateRating: AggregateRating;
  timeRequired: Duration;
  typicalAgeRange: string;
  interactionStatistic: InteractionCounter;
  copyrightYear: number;
  isBasedOn: CreativeWork,string,Product;
  workExample: CreativeWork;
  publishingPrinciples: string,CreativeWork;
  discussionUrl: string;
  releasedEvent: PublicationEvent;
  dateCreated: date,dateTime;
  workTranslation: CreativeWork;
  editor: Person;
  creditText: string;
  recordedAt: Event;
  editEIDR: string,string;
  author: Person,Organization;
  dateModified: dateTime,date;
  sponsor: Organization,Person;
  accessibilitySummary: string;
  encodingFormat: string,string;
  maintainer: Person,Organization;
  educationalAlignment: AlignmentObject;
  acquireLicensePage: CreativeWork,string;
  isAccessibleForFree: boolean;
  datePublished: date,dateTime;
  spatialCoverage: Place;
  sdLicense: CreativeWork,string;
  conditionsOfAccess: string;
  correction: string,string,CorrectionComment;
  contentRating: string,Rating;
  size: QuantitativeValue,DefinedTerm,string,SizeSpecification;
  isPartOf: string,CreativeWork;
  temporal: dateTime,string;
  thumbnailUrl: string;
  inLanguage: string,Language;
  license: string,CreativeWork;
  creator: Organization,Person;
  reviews: Review;
  about: Thing;
  isFamilyFriendly: boolean;
  headline: string;
  accessibilityAPI: string;
  publisherImprint: Organization;
  isBasedOnUrl: string,CreativeWork,Product;
  encodings: MediaObject;
  interpretedAsClaim: Claim;
  accessibilityControl: string;
  citation: CreativeWork,string;
  version: number,string;
  archivedAt: WebPage,string;
  learningResourceType: DefinedTerm,string;
  encoding: MediaObject;
  audio: AudioObject,MusicRecording,Clip;
  mentions: Thing;
  accessModeSufficient: ItemList;
  hasPart: CreativeWork;
  temporalCoverage: string,dateTime,string;
  contributor: Organization,Person;
  video: Clip,VideoObject;


}
